--- a/HTML_BasicCSS_Assessment/index.html
+++ b/HTML_BasicCSS_Assessment/index.html
@@ -10,8 +10,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
+</head>
 <body>
-
+<p id="fdm" align = "left">FDM</p>
+  <div>
+<h1 id="black-text">Bringing Fancy Ideas To Life</h1>
+<h2 id="bold-text">Digital Heaven</h2>
+<h3 id="box">Get a Free Quote</h3>
+  </div>
 </body>
-
-</html>
